--- a/index.html
+++ b/index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Add a Transaction</h2>
+    <form id="transactionForm">
+        <div class="form-group">
+            <label for="price">Price:</label>
+            <input type="number" id="price" required>
+        </div>
+        <div class="form-group">
+            <label for="type">Type:</label>
+            <input type="text" id="type" required>
+        </div>
+        <div class="form-group">
+            <label for="date">Date:</label>
+            <input type="date" id="date" required>
+        </div>
+        <div class="form-group">
+            <label for="notes">Notes:</label>
+            <input type="text" id="notes">
+        </div>
+        <button type="button" onclick="addTransaction()">Add Transaction</button>
+    </form>
+
+    <h2>All Transactions</h2>
+    <button type="button" onclick="showTransactions()">Show Transactions</button>
+    <table id="transactionsTable">
+        <thead>
+            <tr>
+                <th>Price</th>
+                <th>Type</th>
+                <th>Date</th>
+                <th>Notes</th>
+            </tr>
+        </thead>
+        <tbody id="transactionsDetail">
+        </tbody>
+    </table>
+
+
+    <h2>Filters</h2>
+    <div class="form-group">
+        <label for="filterType">Filter by Type:</label>
+        <input type="text" id="filterType">
+        <button type="button" onclick="filterByType()">Apply</button>
+    </div>
+    <div class="form-group">
+        <label for="filterDate">Filter by Date:</label>
+        <input type="date" id="filterDate">
+        <button type="button" onclick="filterByDate()">Apply</button>
+    </div>
+    <div class="form-group">
+        <label for="minPrice">Min Price:</label>
+        <input type="number" id="minPrice">
+        <label for="maxPrice">Max Price:</label>
+        <input type="number" id="maxPrice">
+        <button type="button" onclick="filterByPrice()">Apply</button>
+    </div>
 </body>
+<style src="index.js"></style>
 </html>
