added button to reset local storage

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <input type="number" id="maxPrice">
         <button type="button" onclick="filterByPrice()">Apply</button>
     </div>
+    <h2>Clear Memory</h2>
+    <button type="button" onclick="clearMemory()">Clear All Data</button>
 
     <script src="/index.js"></script>
 </body>
