added button to delete transaction and styled the page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <th>Type</th>
                 <th>Date</th>
                 <th>Notes</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody id="transactionsDetail">
